Fixed the editor page top spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,9 +22,6 @@ html, body{/*TODO: move this to the navbar*/
 }
 
 /*editor.php*/
-.margin-top-m10{
-    margin-top: -10px;
-}
 .padding-top-10{
     padding-top: 10px;
 }
